@@ -3,12 +3,13 @@ package com.flight.service;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.flight.dto.FlightDTO;
+import com.flight.dto.FlightSearchRequest;
 import com.flight.entity.City;
+import com.flight.entity.Flight;
 import com.flight.repository.CityRepository;
 import com.flight.repository.FlightRepository;
 import com.flight.util.FlightMapper;
@@ -28,8 +29,25 @@ public class FlightServiceImpl implements FlightService {
     }
     
     @Override
+    public List<FlightDTO> searchFlights(FlightSearchRequest request) {
+        return flightRepository.searchFlights(
+            request.getDeparture(),
+            request.getArrival(),
+            request.getDate()
+        );
+    }
+
     public List<FlightDTO> searchFlights(String departure, String arrival, LocalDate date) {
-        return flightRepository.searchFlights(departure, arrival, date);
+        FlightSearchRequest request = new FlightSearchRequest();
+        request.setDeparture(departure);
+        request.setArrival(arrival);
+        request.setDate(date);
+        return searchFlights(request);
+    }
+
+    @Override
+    public FlightDTO getFlightDetails(Long id) {
+        return flightMapper.toDTO(flightRepository.findById(id).orElseThrow());
     }
 
     @Override
@@ -38,13 +56,13 @@ public class FlightServiceImpl implements FlightService {
     }
 
     @Override
-    public List<Map<String, String>> getAllCitiesAsMap() {
+    public List<Map<String, String>> getAllCityMaps() {
         return cityRepository.findAll().stream()
             .map(city -> Map.of(
                 "code", city.getCode(),
                 "name", city.getName(),
                 "country", city.getCountry()
             ))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
